data/derived/sp14/progs/unify/prog1980.ml.out
Characters 46-47:
  let rec wwhile (f,b) = if snd f b then wwhile f fst f b else fst f b;;
                                                ^
Error: This expression has type 'a * ('b -> bool)
       but an expression was expected of type ('a * ('b -> bool)) * 'b
